modified:   src/client/package-lock.json 	modified:   src/client/package.json 	deleted:    src/client/src/App.test.tsx 	modified:   src/client/src/App.tsx 	modified:   src/client/src/components/GLTFComponent.tsx 	modified:   src/client/src/components/ThreeDView.tsx 	modified:   src/client/src/documents.ts 	new file:   src/client/src/test/util/CombineTransform.test.ts 	new file:   src/client/src/test/util/DegreesToRadian.ts 	modified:   src/client/src/types.d.ts 	new file:   src/client/src/util/CombineTransform.ts

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.144.0"
+    "@types/three": "^0.144.0",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
